tests/neg/namespace-redefintion2/main.stk
namespace test

import test.lib

fun main =
  lib.double 10 p
